<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Lite Guardian(HK)</string>
    <string name="prompt">Reminder</string>
    <string name="bind_tracker_prompt">Reminder: It might be fail if the decive is off. Please make sure the device is on and the blue LED is blinking.</string>
    <string name="tracker_no">Device Serial Number</string>
    <string name="tracker_mobile">Contact No.</string>
    <string name="apply_range">Apply range</string>
    <string name="scan">San the QR code </string>
    <string name="scan_text">when the QR code is in the frame,it will scan automatically</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="password1">Confirm password</string>
    <string name="input_user_login2">Please enter the phone number</string>
    <string name="input_pwd">8-20 letters or numbers</string>
    <string name="input_tracker_name">Username should be within 30 characters </string>
    <string name="input_tracker_mark">Note maximum of 500 characters</string>
    <string name="input_tracker_sim">SIM No. 6-20 numbers</string>
    <string name="input_tracker_phone">Contact No.</string>
    <string name="old_passwd">Old password</string>
    <string name="input_old_passwd">Pls input old password</string>
    <string name="input_again_new_passwd">Please enter the new password again</string>
    <string name="new_passwd">New password</string>
    <string name="input_new_passwd">Pls input new password</string>
    <string name="confirm_passwd">Confirm password</string>
    <string name="input_passwd1">Please confirm your password again</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="forget_password">Forgot password?</string>
    <string name="help">Support</string>
    <string name="close">Close</string>
    <string name="guangao">advertising</string>
    <string name="agreement_text"> User agreement</string>
    <string name="notice">Notice</string>
    <string name="setting">Settings</string>
    <string name="time_location">Location update</string>
    <string name="reset">Default setting</string>
    <string name="check_update">Check update</string>
    <string name="update">Update</string>
    <string name="time_close">Close</string>
    <string name="time_10_second">10 seconds</string>
    <string name="time_40_second">30 seconds</string>
    <string name="time_1">1 min</string>
    <string name="time_2">2 mins</string>
    <string name="time_3">3 mins</string>
    <string name="time_5">5 mins</string>
    <string name="time_10">10 mins</string>
    <string name="time_30">30 mins</string>
    <string name="time_60">60 mins</string>
    <string name="time_3s">5</string>
    <string name="time_5s">10</string>
    <string name="time_8s">30</string>
    <string name="time_10s">60</string>
    <string name="time_15s">15</string>
    <string name="time_30s">30</string>
    <string name="speed_20">20</string>
    <string name="speed_40">40</string>
    <string name="speed_60">60</string>
    <string name="speed_80">80</string>
    <string name="speed_100">100</string>
    <string name="speed_120">120</string>
    <string name="speed_140">140</string>
    <string name="speed_160">160</string>
    <string name="speed_180">180</string>
    <string name="speed_200">200</string>
    <string name="position_notice">Important. This option changes how often the device communicates its position.Battery standby time will be less if the location frequency is higher. Ensure you set the correct frequency for your needs.</string>
    <string name="version_update">APP software</string>
    <string name="unbind">Remove the bound device</string>
    <string name="delect_phonebook">delete</string>
    <string name="bind_equipment">Bind the device</string>
    <string name="skip">Skip</string>
    <string name="apn_setting">APN settings</string>
    <string name="apn_hint">Prompt：If the device is not online after inserting SIM card,pls set APN. Pls make sure the device is power on before setting APN.</string>
    <string name="apn_watch_hint">Prompt：If the device is not online after inserting SIM card,pls set APN. Pls make sure the device is power on before setting APN.</string>
    <string name="apn_sim">Device SIM No.</string>
    <string name="apn_text">APN</string>
    <string name="apn_username_text">Username(APN)</string>
    <string name="apn_passwd_text">"Password"(APN)</string>
    <string name="device_version_update">Device firmware</string>
    <string name="current_version">Current version</string>
    <string name="newest_version">Newest version</string>
    <string name="net_exception">Abnormal network or server </string>
    <string name="confirm">Confirm</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">Submit</string>
    <string name="alarm_clock_title_hint">Reminder title</string>
    <string name="anniversaries">Anniversaries(repeat annually)</string>
    <string name="repayment_date">Payment day(repeat monthly)</string>
    <string name="repeat_every_week">Repeat weekly</string>
    <string name="week_1">Mon.</string>
    <string name="week_2">Tues.</string>
    <string name="week_3">Wed.</string>
    <string name="week_4">Thur.</string>
    <string name="week_5">Fri.</string>
    <string name="week_6">Sat.</string>
    <string name="week_7">Sun.</string>
    <string name="alarm_clock_day">Alarm clock date</string>
    <string name="alarm_clock_time_add">Add alarm clock</string>
    <string name="month_no_last">Date you choose does not exists monthly,if you want last day reminder,pls click.</string>
    <string name="month_last">The last day of each month</string>
    <string name="about_customer">Phone：</string>
    <string name="about_number">(852)2627 3380</string>
    <string name="about_timer"> Mon-Fri 9:00-12:30/13:30-18:00</string>
    <string name="about_email">Email：info@castelbeidou.com</string>
    <string name="about_net_name">Web：</string>
    <string name="about_net_web">http://www.castelbeidou.com</string>
    <string name="about_qr_fb">Lite Guardian</string>
    <string name="about_qr_ytb">Product teaching</string>
</resources>