<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_white_bg_nor"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_title"
                style="@style/edit_no_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alarm_clock_title_hint" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_line_landscape" />

            <LinearLayout
                android:id="@+id/ll_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_time_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/icon_add_pressed" />

                <TextView
                    style="@style/text_base_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/alarm_clock_time_add" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dp" >

                <TextView
                    style="@style/text_base_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_clock_day" />

                <TextView
                    android:id="@+id/tv_day"
                    style="@style/text_base_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_line_landscape" />

            <RadioButton
                android:id="@+id/rb_anniversaries"
                style="@style/time_location_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/anniversaries" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_line_landscape" />

            <RadioButton
                android:id="@+id/rb_repayment_date"
                style="@style/time_location_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repayment_date" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_line_landscape" />

            <LinearLayout
                android:id="@+id/ll_month_last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="gone" >

                <TextView
                    style="@style/text_base_black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:text="@string/month_no_last" />

                <CheckBox
                    android:id="@+id/cb_month_last"
                    style="@style/text_base_black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1.0"
                    android:button="@null"
                    android:checked="true"
                    android:drawableLeft="@drawable/selector_rbtn_auth"
                    android:text="@string/month_last" >
                </CheckBox>
            </LinearLayout>

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_line_landscape" />

            <RadioButton
                android:id="@+id/rb_repeat_every_week"
                style="@style/time_location_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat_every_week" />

            <LinearLayout
                android:id="@+id/ll_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/tv_week_1"
                    style="@style/text_week"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/week_1" />

                <TextView
                    android:id="@+id/tv_week_2"
                    style="@style/text_week"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/week_2" />

                <TextView
                    android:id="@+id/tv_week_3"
                    style="@style/text_week"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/week_3" />

                <TextView
                    android:id="@+id/tv_week_4"
                    style="@style/text_week"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/week_4" />

                <TextView
                    android:id="@+id/tv_week_5"
                    style="@style/text_week"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/week_5" />

                <TextView
                    android:id="@+id/tv_week_6"
                    style="@style/text_week"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/week_6" />

                <TextView
                    android:id="@+id/tv_week_7"
                    style="@style/text_week"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/week_7" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_commit"
            style="@style/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:text="@string/submit"/>
    </LinearLayout>

</ScrollView>