<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/about" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:paddingBottom="15dp"
        android:text="@string/app_name"
        android:textColor="@color/text_9"
        android:textSize="@dimen/text_12" />

    <RelativeLayout
        android:id="@+id/rl_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_selector"
        android:clickable="true"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <TextView
            style="@style/text_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/agreement_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/pic_next_selector" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/about_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_customer"
            android:textColor="@color/text_9"
            android:textSize="@dimen/text_12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/about_text_id"
            android:text="@string/about_number"
            android:textColor="@color/text_9"
            android:textSize="@dimen/text_12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_text_id"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/about_text_id"
            android:text="@string/about_timer"
            android:textColor="@color/text_9"
            android:textSize="@dimen/text_12"/>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="12dp"
        android:text="@string/about_email"
        android:textColor="@color/text_9"
        android:textSize="@dimen/text_12"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_net_name"
            android:textColor="@color/text_9"
            android:textSize="@dimen/text_12"/>
        <TextView
            android:id="@+id/text_net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/home_passenger"
            android:text="@string/about_net_web"
            android:textSize="@dimen/text_12"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_qr_fb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/about_qr_fb"
                android:textColor="@color/text_9"
                android:textSize="@dimen/text_12"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_qr_ytb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/about_qr_ytb"
                android:textColor="@color/text_9"
                android:textSize="@dimen/text_12"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>