<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/group"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/shape_time_loc_setting"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/rbtn_cancel"
                        style="@style/time_location_setting"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:button="@null"
                        android:text="@string/close" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_frame" />

                    <RadioButton
                        android:id="@+id/rbtn_speed_60"
                        style="@style/time_location_setting"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:button="@null"
                        android:text="@string/speed_60" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_frame" />

                    <RadioButton
                        android:id="@+id/rbtn_speed_80"
                        style="@style/time_location_setting"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:button="@null"
                        android:text="@string/speed_80" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_frame" />

                    <RadioButton
                        android:id="@+id/rbtn_speed_100"
                        style="@style/time_location_setting"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:button="@null"
                        android:text="@string/speed_100" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_frame" />

                    <RadioButton
                        android:id="@+id/rbtn_speed_120"
                        style="@style/time_location_setting"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:button="@null"
                        android:text="@string/speed_120" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_frame" />

                    <RadioButton
                        android:id="@+id/rbtn_speed_140"
                        style="@style/time_location_setting"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:button="@null"
                        android:text="@string/speed_140" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_frame" />

                    <RadioButton
                        android:id="@+id/rbtn_speed_160"
                        style="@style/time_location_setting"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:button="@null"
                        android:text="@string/speed_160" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_frame" />

                    <RadioButton
                        android:id="@+id/rbtn_speed_200"
                        style="@style/time_location_setting"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:button="@null"
                        android:text="@string/speed_200" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/btn_commit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_theme_selector"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/text_button" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>